@@ -73,6 +73,9 @@ class nsPluginInstance:public nsPluginInstanceBase {
     void Play();
     void Pause();
     void Stop();
+    void FastForward();
+    void FastReverse();
+    void Seek(double counter);
     void SetShowControls(PRBool value);    
     void SetFullScreen(PRBool value);
     
